fix navbar layout bug. ref. #37

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,9 +1,6 @@
 .navbar .dropdown:hover .dropdown-menu {
     display: block;
 }
-.navbar .dropdown {
-    margin-right: 15px;
-}
 .navbar .dropdown-menu li {
     text-align: center;
 }
